--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@react-three/drei": "^9.53.0",
     "@react-three/fiber": "^8.10.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/three": "^0.148.0",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "reactstrap": "^9.1.5",
     "three": "^0.148.0"
   },
   "devDependencies": {
